--- a/src/assets/themes/default.css
+++ b/src/assets/themes/default.css
@@ -448,6 +448,16 @@
     transition: 0.2s top;
     max-width: 50%;
 }
+@media screen and (max-width: 500px) {
+    .kiwi-userbox {
+        left: 0;
+        right: 0;
+        bottom: 40px;
+        top: auto !important;
+        max-width: 100%;
+        border-width: 1px 0;
+    }
+}
 .kiwi-userbox-icon {
     font-size: 1.5em;
     margin-right: 0.3em;
