Hover over nicks highlights all that users messages

--- a/src/assets/themes/default.css
+++ b/src/assets/themes/default.css
@@ -407,7 +407,10 @@ p {
     background: #e3f1d4;
     border-left-color: #80ab52;
 }
-
+.kiwi-messagelist-message--hover {
+    background: #e3f1d4;
+    border-left-color: #80ab52;
+}
 .kiwi-messagelist-message > div {
     padding: 2px 4px;
 }
