Page background colour #11

--- a/static/themes/default.css
+++ b/static/themes/default.css
@@ -1,5 +1,6 @@
 .kiwi-wrap {
     color: #2c3e50;
+    background: #fff;
     font-family: Source Sans Pro, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 1.6em;
