Include the nick in traffic type messages

--- a/static/themes/default.css
+++ b/static/themes/default.css
@@ -511,6 +511,9 @@ p {
 }
 
 /* Traffic (joins, parts, quits, kicks) */
+.kiwi-messagelist-message-traffic .kiwi-messagelist-nick {
+    display: none;
+}
 .kiwi-messagelist-message-traffic .kiwi-messagelist-body {
     font-style: italic;
 }
