--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -1,45 +1,25 @@
+@import '../common/layout.css';
+
 .kiwi-wrap {
+    font-family: Source Sans Pro, Helvetica, sans-serif;
     color: #2c3e50;
     background: #fff;
-    font-family: Source Sans Pro, Helvetica, sans-serif;
-    font-size: 14px;
-    line-height: 1.6em;
-    -webkit-font-smoothing: antialiased;
 }
 
 .kiwi-workspace:before {
+    /* The top bar at the top of the startup page */
     background: -webkit-linear-gradient(left, #BDDE6B 0%,#BDDE6B 20%, #7DBD67 20%, #7DBD67 40%,#ECED77 40%,#ECED77 60%,#F6C358 60%,#F6C358 80%,#F66B58 80%) 0 0 no-repeat;
-    position: absolute;
-    content: '';
-    height: 4px;
-    right: 0;
-    left: 0;
-    top: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    padding: 0.7em 0 0.2em 0;
-    margin: 0;
-}
-p {
-    margin: 0.5em 0 1em 0;
-}
 .u-link {
     color: #42b983;
-    text-decoration: none;
-    cursor: pointer;
 }
 .u-button {
-    display: inline-block;
     color: #2c3e50;
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    white-space: nowrap;
     vertical-align: middle;
     text-align: center;
-    cursor: pointer;
-    padding: .4em 0.9em;
-    font-size: 1em;
 }
 .u-button-primary {
     background-color: #0078e7;
@@ -68,52 +48,22 @@ p {
     border-color: #c37171;
 }
 
-.u-form {
-    text-align: left;
-}
-.u-form label {
-    margin-bottom: 5px;
-    display: inline-block;
-}
-.u-form label span {
-    display: inline-block;
-    width: 100px;
-    margin-right: 1em;
-    text-align: right;
-}
+
 .u-form .u-input,
 .u-form textarea {
-    font-size: 0.9em;
-    padding: 3px 5px;
     border: 1px solid #cccccc;
     border-bottom: 2px solid #42b983;
     background: #ffffff;
     outline-color: #42b983;
-}
-.u-form .u-submit {
-    margin: 2em auto;
-    display: block;
 }
 
 .u-tabbed-view-tabs {
     border-bottom: 1px solid #ddd;
 }
 .u-tabbed-view-tab {
-    padding: 1em 2em;
-    display: inline-block;
-    cursor: pointer;
-    border-bottom: 0 solid #42b983;
+    border-color: #42b983;
     transition: border-width 0.1s;
     font-weight: bold;
-}
-.u-tabbed-view-tab:hover {
-    border-bottom-width: 3px;
-}
-.u-tabbed-view-tab--active {
-    border-bottom-width: 3px;
-}
-.u-tabbed-content {
-    margin-top: 10px;
 }
 
 .irc-fg-colour-white { color: #FFFFFF; }
@@ -158,80 +108,17 @@ p {
  */
 
 .kiwi-statebrowser {
-    border-right: 5px solid rgba(255,255,255,0.3);
     background: #383838;
     /* this also looks cool, background: #05394a; */
     color: rgb(137, 155, 166);
 }
 
 .kiwi-statebrowser-usermenu {
-    text-align: center;
     border-bottom: 1px solid rgba(255,255,255,0.3);
-    padding: 7px 0;
-    font-size: 1.1em;
-}
-.kiwi-statebrowser-usermenu-body {
-    font-size: 0.9em;
-    margin: 5px;
-}
-
-.kiwi-statebrowser-switcher a {
-    padding: 5px 0;
-    font-size: 1.2em;
-    cursor: pointer;
-}
-.kiwi-statebrowser-switcher a:first-of-type {
-    background: rgba(255,255,255,0.15);
-}
-.kiwi-statebrowser-switcher a:hover {
-    background: rgba(255,255,255,0.1);
-}
-
-.kiwi-statebrowser-network {
-    margin-bottom: 2em;
-    overflow: hidden;
-}
-
-.kiwi-statebrowser-network-name {
-    /*font-weight: bold;*/
-    font-size: 1.1em;
-    text-align: center;
-    display: block;
-    background: rgba(255,255,255,0.15);
-    padding: 4px 0;
-}
-.kiwi-statebrowser-network-status {
-    background: rgba(255,255,255,0.1);
-    text-align: center;
-    padding: 4px;
-    overflow: hidden;
-    position: relative;
-    height: 1.5em;
-    font-size: 0.9em;
-}
-/* During DOM entering and leaving */
-.kiwi-statebrowser-network-status-transition-enter-active,
-.kiwi-statebrowser-network-status-transition-leave-active {
-    transition: height .7s, padding .7s;
-}
-/*  */
-.kiwi-statebrowser-network-status-transition-enter,
-.kiwi-statebrowser-network-status-transition-leave-active {
-    height: 0;
-    padding: 0;
-}
-
-.kiwi-statebrowser-channels {
-    margin: 0px 10px;
-}
-.kiwi-statebrowser-channel {
-    margin-top: 5px;
 }
 
 .kiwi-statebrowser-channel-name {
     color: #a7a7a7;
-    flex: 1;
-    transition: padding 0.1s, border 0.1s;
 }
 
 .kiwi-statebrowser-channel-notjoined .kiwi-statebrowser-channel-name {
@@ -244,12 +131,7 @@ p {
 }
 
 .kiwi-statebrowser-channel-label {
-    padding: 3px 5px;
-    font-size: 0.7em;
-    border-radius: 5px;
     background: green;
-    line-height: 1.3em;
-    font-weight: bold;
 }
 
 .kiwi-statebrowser-channel-label-transition-enter-active, .kiwi-statebrowser-channel-label-transition-leave-active {
@@ -259,27 +141,15 @@ p {
     opacity: 0;
 }
 
-.kiwi-statebrowser-channel-settings {
-    height: 100%;
-    width: 20px;
-    text-align: center;
-    font-weight: bold;
-    cursor: pointer;
-}
-
 .kiwi-statebrowser-channel-popup {
     background: #383838;
     border: 3px solid #6b6b6b;
     border-left: none;
 }
 
-.kiwi-statebrowser-newchannel {
-    margin: 1em 0.5em;
-}
 .kiwi-statebrowser-newchannel-inputwrap {
     border-radius: 3px;
     background: #fff;
-    padding: 3px;
     position: relative;
     opacity: 0.8;
     transition: opacity 0.3s;
@@ -287,26 +157,9 @@ p {
 .kiwi-statebrowser-newchannel-inputwrap--focus {
     opacity: 1;
 }
-.kiwi-statebrowser-newchannel-inputwrap input {
-    outline: none;
-    border: none;
-    display: block;
-    /* left: 0; */
-    /* right: 10px; */
-    width: calc(100% - 20px);
-    margin-right: 30px;
-}
-.kiwi-statebrowser-newchannel-inputwrap i {
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    cursor: pointer;
-}
 
 .kiwi-statebrowser-options {
     background: #383838;
-    /* some space on the right so it doesnt overlap the parent elements scrollbar */
-    margin-right: 10px;
 }
 
 
@@ -323,11 +176,7 @@ p {
 .kiwi-container-toggledraw-statebrowser,
 .kiwi-container-toggledraw-nicklist {
     background: #f6f6f6;
-    cursor: pointer;
-    text-align: center;
-    font-size: 1.6em;
     border-bottom: 1px solid #dddddd;
-    line-height: 50px;
 }
 .kiwi-container-toggledraw-statebrowser {
     border-right: 1px solid #dddddd;
@@ -337,7 +186,6 @@ p {
 }
 .kiwi-container-toggledraw-nicklist--disabled {
     color: #b8babd;
-    cursor: default;
 }
 
 
@@ -349,26 +197,9 @@ p {
 .kiwi-nicklist {
     background-color: #f6f6f6;
     border-left: 1px solid #dddddd;
-    transition: right 0.5s;
 }
 .kiwi-nicklist-info {
     border: 1px solid #ddd;
-    font-size: 0.9em;
-    margin: 10px 0;
-    padding: 10px 0;
-    text-align: center;
-    border-width: 1px 0;
-}
-.kiwi-nicklist-users {
-    padding: 0 20px;
-    line-height: 1.2em;
-}
-.kiwi-nicklist-user {
-    padding: 3px 0;
-}
-.kiwi-nicklist-user-nick {
-    font-weight: bold;
-    cursor: pointer;
 }
 
 
@@ -378,26 +209,15 @@ p {
  */
 
 .kiwi-header {
-    padding: 5px;
     background-color: #f6f6f6;
     border-bottom: 1px solid #dddddd;
 }
-.kiwi-header:hover {
-    height: auto;
-}
-.kiwi-header-name {
-    font-weight: bold;
-}
 .kiwi-header-topic {
-    font-size: 0.9em;
     color: #5f5f5f;
-    text-overflow: ellipsis;
 }
 
 .kiwi-header-buffersettings {
     border-top: 1px solid #dddddd;
-    padding: 5px;
-    margin-top: 1em;
 }
 
 
@@ -409,27 +229,16 @@ p {
 
 .kiwi-controlinput {
     background: #eeeeee;
-    padding: 4px;
 }
 .kiwi-controlinput-inner {
     border: 1px solid #cccccc;
     background: #ffffff;
-    padding: 3px;
 }
 .kiwi-controlinput-user {
-    padding: 0 5px;
-    margin-right: 5px;
-    font-weight: bold;
-    text-align: center;
     background: #f6f6f6;
 }
 .kiwi-controlinput-input-wrap {
-    padding: 3px;
     background: #fff;
-}
-.kiwi-controlinput-input {
-    border: none;
-    outline: none;
 }
 
 
@@ -445,17 +254,9 @@ p {
 }
 .kiwi-autocomplete-item {
     border-bottom: 1px solid #CCC;
-    padding: 5px 2em;
 }
 .kiwi-autocomplete-item--selected {
     background: #D1EACD;
-}
-.kiwi-autocomplete-item-value {
-    font-weight: bold;
-}
-.kiwi-autocomplete-item-action {
-    float: right;
-    font-size: 0.9em;
 }
 
 
@@ -466,8 +267,6 @@ p {
 
 .kiwi-messagelist-message {
     border-top: 1px solid #f7f5f5;
-    line-height: 1.5em;
-    margin: 0 3px;
     /* some message highlights add a left border so add a default invisble one to keep them inline */
     border-left: 3px solid transparent;
 }
@@ -483,29 +282,12 @@ p {
     border-left-color: #80ab52;
 }
 .kiwi-messagelist-message > div {
-    padding: 2px 4px;
 }
 
 .kiwi-messagelist-time {
-    font-size: 0.8em;
     color: #c1c1c1;
 }
 
-.kiwi-messagelist-nick {
-    text-align: right;
-    font-weight: bold;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    vertical-align: top;
-    cursor: pointer;
-}
-.kiwi-messagelist-nick:hover {
-    overflow: visible;
-}
-
-.kiwi-messagelist-body {
-    line-height: 1.5em;
-}
 
 .kiwi-messagelist-message-repeat {
     border-top: none;
@@ -518,39 +300,15 @@ p {
 }
 
 .kiwi-messagelist-body .kiwi-nick {
-    cursor: pointer;
 }
 
 /* Topic changes */
 .kiwi-messagelist-message-topic {
-    margin: 10px;
     background: #FFF5AB;
     border: 1px solid #F3C572;
     border-radius: 5px;
-    text-align: center;
-}
-.kiwi-messagelist-message-topic .kiwi-messagelist-time {
-    display: none;
-}
-.kiwi-messagelist-message-topic .kiwi-messagelist-nick {
-    display: none;
-}
-.kiwi-messagelist-message-topic .kiwi-messagelist-body {
-    margin-left: 0;
 }
 
-/* Actions */
-.kiwi-messagelist-message-action .kiwi-messagelist-message-body {
-    font-style: italic;
-}
-
-/* Traffic (joins, parts, quits, kicks) */
-.kiwi-messagelist-message-traffic .kiwi-messagelist-nick {
-    display: none;
-}
-.kiwi-messagelist-message-traffic .kiwi-messagelist-body {
-    font-style: italic;
-}
 .kiwi-messagelist-message-traffic-join {
     color: #009900;
 }
@@ -570,24 +328,11 @@ p {
 }
 .kiwi-messagelist-message-action .kiwi-messagelist-body {
     color: #009900;
-    font-style: italic;
-}
-.kiwi-messagelist-message-action .kiwi-messagelist-nick {
-    display: none;
 }
 
 /* MOTD */
 .kiwi-messagelist-message-motd {
     color: #666;
-    font-family: monospace;
-}
-
-/* Links */
-.kiwi-messagelist-message-linkhandle {
-    display: inline-block;
-    margin: 0 0.5em;
-    font-size: 0.8em;
-    cursor: pointer;
 }
 
 /* Errors */
@@ -599,45 +344,11 @@ p {
 
 
 /**
- * Not connected sign
- */
-.kiwi-notconnected {
-    margin: 3em 0;
-}
-.kiwi-notconnected-bigicon {
-    text-align: center;
-}
-.kiwi-notconnected-bigicon > i {
-    font-size: 4em;
-    cursor: pointer;
-}
-.kiwi-notconnected-caption {
-    text-align: center;
-    font-size: 1.2em;
-    margin-top: 1em;
-    cursor: pointer;
-}
-.kiwi-notconnected-networksettings {
-    display: block;
-    font-size: 0.9em;
-    margin-top: 1em;
-}
-
-
-
-/**
  * Network settings
  */
 
-.kiwi-networksettings {
-    padding: 1em;
-}
-.kiwi-networksettings-section {
-    margin: 20px 10px 40px 10px;
-}
 .kiwi-networksettings-danger h3 {
     background: #d86f6f;
-    padding: 5px 10px;
 }
 
 
@@ -646,26 +357,15 @@ p {
  * Alias settings
  */
 .kiwi-settings-aliases-input {
-    width: 80%;
-    height: 200px;
-    font-size: 0.8em;
-    line-height: 1.4em;
-    font-family: monospace;
     border-color: #cccccc;
-}
-.kiwi-settings-aliases-showhelp {
-    display: block;
 }
 .kiwi-settings-aliases-help {
     background: #f3f2f2;
     border: 1px dashed gray;
-    padding: 1em;
-    margin: 1em 0;
 }
 .kiwi-settings-aliases-help em {
     color: #ab1010;
     background: #fff6a5;
-    padding: 1px 2px;
 }
 
 
@@ -676,74 +376,25 @@ p {
 
 .kiwi-userbox {
     border: 1px solid #dddddd;
-    border-right-width: 0;
-    padding: 10px;
     background: #f6f6f6;
     transition: 0.2s top;
-    max-width: 50%;
 }
 @media screen and (max-width: 500px) {
     .kiwi-userbox {
-        left: 0;
-        right: 0;
-        bottom: 40px;
-        top: auto !important;
-        max-width: 100%;
-        border-width: 1px 0;
     }
-}
-.kiwi-userbox-icon {
-    font-size: 2.8em;
-    margin-right: 0.3em;
-    position: absolute;
-}
-.kiwi-userbox-header h3 {
-    margin: 0 0 0 40px;
-    padding: 0;
 }
 .kiwi-userbox-usermask {
     color: #9e9e9e;
-    display: block;
-    margin: 0 0 0 40px;
-    font-size: 0.9em;
-}
-.kiwi-userbox-actions a {
-    margin-right: 1em;
 }
 .kiwi-userbox-whois {
     background: #ffffff;
-    padding: 5px;
     color: #2c3e50;
-    line-height: 1.4em;
     border: 1px dashed #9e9e9e;
 }
 .kiwi-userbox-whois-line {
-    display: block;
 }
 .kiwi-userbox-actions-op {
     border-top: 1px solid #9e9e9e;
-    margin: 0.7em 0 0 0;
-    padding: 0.7em 0;
-}
-.kiwi-userbox-actions-op form label {
-    display: block;
-    margin-bottom: 0.7em;
-}
-
-
-
-/**
- * Media viewer
- */
-
-.kiwi-mediaviewer-controls {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 1;
-}
-.kiwi-mediaviewer-controls-close {
-    padding: 3px 15px;
 }
 
 
@@ -751,65 +402,10 @@ p {
 /**
  * Welcome startup screen
  */
-.kiwi-welcome-simple {
-    text-align: center;
-    margin-top: 1em;
-    width: 300px;
-    margin: 0 auto;
-}
-.kiwi-welcome-simple-nick,
-.kiwi-welcome-simple-channel,
-.kiwi-welcome-simple-start {
-    margin-top: 2em;
-}
-.kiwi-welcome-simple-start {
-    font-size: 1.1em;
-    cursor: pointer;
-}
+
 .kiwi-welcome-simple-start[disabled] {
     opacity: 0.65;
-    cursor: not-allowed;
 }
 
 
 
-/**
- * Custom server startup screen
- */
-.kiwi-customserver {
-    text-align: center;
-    padding-top: 1em;
-}
-.kiwi-customserver-start {
-    font-size: 1.1em;
-    cursor: pointer;
-}
-.kiwi-customserver .input-text {
-    margin-bottom: 1em;
-}
-.kiwi-customserver-tls {
-    color: #bfbfbf;
-}
-.kiwi-customserver-tls--enabled {
-    color: green;
-}
-
-.kiwi-customserver-channel {
-    margin-top: 1em;
-}
-.kiwi-customserver-server-types {
-    font-size: 0.9em;
-    text-align: center;
-}
-.kiwi-customserver-server-types a {
-    margin: 0 1em;
-}
-
-
-
-/**
- * Misc styles
- */
-
-.kiwi-nick {
-}
