Topic message spacing

--- a/static/themes/common/layout.css
+++ b/static/themes/common/layout.css
@@ -438,7 +438,8 @@ p {
 
 /* Topic changes */
 .kiwi-messagelist-message-topic {
-    margin: 10px;
+    margin: 18px;
+    padding: 5px;
     text-align: center;
 }
 .kiwi-messagelist-message-topic .kiwi-messagelist-time {
