--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -48,6 +48,21 @@
     border-color: #c37171;
 }
 
+.input-text {
+    background: #fff;
+}
+.input-text-label {
+    color: gray;
+}
+.input-text--focus {
+    border-color: #42b983;
+}
+.input-text-underline {
+    border-color: #a9a9a9;
+}
+.input-text-underline-active {
+    background: #42b983;
+}
 
 .u-form .u-input,
 .u-form textarea {
