--- a/static/themes/common/layout.css
+++ b/static/themes/common/layout.css
@@ -87,6 +87,9 @@ p {
     margin-top: 10px;
 }
 
+/**
+ * Common text formatting styles
+ */
 .irc-fg-colour-white { }
 .irc-fg-colour-black { }
 .irc-fg-colour-blue { }
@@ -121,6 +124,24 @@ p {
 .irc-bg-colour-grey { }
 .irc-bg-colour-light-grey { }
 
+.kiwi-formatting-extras-quote {
+    border: 1px solid #b5b5b5;
+    padding: 0 3px;
+    border-radius: 5px;
+    background: rgba(0,0,0,0.05);
+    font-family: monospace;
+}
+.kiwi-formatting-extras-invisible {
+    font-size: 0px;
+}
+.kiwi-formatting-extras-block {
+    border: 1px solid gray;
+    padding: 0 3px;
+    border-radius: 5px;
+    background: rgba(0,0,0,0.05);
+    font-family: monospace;
+    white-space: pre;
+}
 
 
 
